# server-status-rs

./: Cargo.toml  README.md  config-example.yaml
.github/workflows/: release.yml
src/: lib.rs  main.rs
systemd/: server-status-mqtt.service
