[package]
name = "server-status-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.10.0"
anyhow = "1.0.53"
psutil = { version = "3.2.1", default-features = false, features = ["cpu", "disk", "memory", "sensors"] }
# heim = { version = "0.1.0-rc.1", features = ["cpu", "disk", "memory", "sensors"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
